--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ language: node_js
 node_js:
 - '0.10'
 script: node_modules/karma/bin/karma start karma.conf.js --single-run
-before_install:
+before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
-before_script:
+- sleep 3 #Give time to start up xvfb
 - npm install
-- node server.js
 env:
   global:
   #Geocoding
